crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__outcome_refused.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
3b 00 00 00 10 00 00 00 00 00 00 00 00 00 00 00
00 00 00 01 e7 03 28 59 6f 75 72 20 64 72 61 66
74 20 69 6e 20 74 68 65 20 74 65 72 6d 69 6e 61
6c 20 69 73 20 69 6e 20 74 68 65 20 77 61 79
