crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__outcome_setup_failed.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
4c 00 00 00 10 00 00 00 00 00 00 00 00 00 00 00
00 00 00 01 e7 05 0e 63 6f 6e 64 75 63 74 6f 72
2e 6a 73 6f 6e 02 0b 62 75 6e 20 69 6e 73 74 61
6c 6c 1b 65 72 72 6f 72 3a 20 6c 6f 63 6b 66 69
6c 65 20 68 61 64 20 63 68 61 6e 67 65 73 01 02
