crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__outcome_started.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
23 00 00 00 10 00 00 00 00 00 00 00 00 00 00 00
00 00 00 01 e7 02 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 74 17
