crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__outcome_unsupported.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
1b 00 00 00 10 00 00 00 00 00 00 00 00 00 00 00
00 00 00 01 e7 04 08 73 65 74 2d 6d 6f 64 65
