crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__push_body.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
72 00 00 00 00 00 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 30 11 10 00 00 00 00 00 00 00 00
00 00 00 00 00 00 74 17 01 10 00 00 00 00 00 00
00 00 00 00 00 00 00 00 30 11 10 00 00 00 00 00
00 00 00 00 00 00 00 00 00 5e 55 0e 46 69 78 20
74 68 65 20 6c 61 64 64 65 72 0f 52 75 6e 20 63
61 72 67 6f 20 74 65 73 74 3f 00 00 01 08 74 6f
6f 6c 75 5f 30 31
