crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__push_body_choices.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
ec 00 00 00 00 00 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 30 11 10 00 00 00 00 00 00 00 00
00 00 00 00 00 00 74 17 01 10 00 00 00 00 00 00
00 00 00 00 00 00 00 00 30 11 10 00 00 00 00 00
00 00 00 00 00 00 00 00 00 5e 55 0e 46 69 78 20
74 68 65 20 6c 61 64 64 65 72 0f 52 75 6e 20 63
61 72 67 6f 20 74 65 73 74 3f 00 00 01 08 74 6f
6f 6c 75 5f 30 31 02 08 50 6f 73 74 67 72 65 73
34 5b 7b 22 71 75 65 73 74 69 6f 6e 22 3a 22 57
68 69 63 68 20 64 61 74 61 62 61 73 65 3f 22 2c
22 61 6e 73 77 65 72 22 3a 22 50 6f 73 74 67 72
65 73 22 7d 5d 06 53 51 4c 69 74 65 32 5b 7b 22
71 75 65 73 74 69 6f 6e 22 3a 22 57 68 69 63 68
20 64 61 74 61 62 61 73 65 3f 22 2c 22 61 6e 73
77 65 72 22 3a 22 53 51 4c 69 74 65 22 7d 5d 00
