crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__push_body_program.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
72 00 00 00 00 02 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 30 11 10 00 00 00 00 00 00 00 00
00 00 00 00 00 00 5e 55 01 10 00 00 00 00 00 00
00 00 00 00 00 00 00 00 30 11 10 00 00 00 00 00
00 00 00 00 00 00 00 00 00 5e 55 06 64 65 70 6c
6f 79 1f 41 70 70 72 6f 76 65 20 74 68 65 20 70
72 6f 64 75 63 74 69 6f 6e 20 72 6f 6c 6c 6f 75
74 3f 00 00 00 00
