crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__push_body_ready_to_merge.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
5a 00 00 00 04 00 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 30 11 10 00 00 00 00 00 00 00 00
00 00 00 00 00 00 74 17 00 0e 46 69 78 20 74 68
65 20 6c 61 64 64 65 72 1b 43 68 65 63 6b 73 20
70 61 73 73 3b 20 72 65 61 64 79 20 74 6f 20 6d
65 72 67 65 01 80 9f 49 00 00 00 00 01 04
