crates/slopty-proto/tests/snapshots/golden_thread__golden_thread__push_device.snap
---
source: crates/slopty-proto/tests/golden_thread.rs
expression: hex(&bytes)
---
8e 00 00 00 0c 01 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 c1 1e 40 30 66 30 66 30 66 30 66
30 66 30 66 30 66 30 66 30 66 30 66 30 66 30 66
30 66 30 66 30 66 30 66 30 66 30 66 30 66 30 66
30 66 30 66 30 66 30 66 30 66 30 66 30 66 30 66
30 66 30 66 30 66 30 66 07 07 07 07 07 07 07 07
07 07 07 07 07 07 07 07 07 07 07 07 07 07 07 07
07 07 07 07 07 07 07 07 01 15 64 65 76 2e 61 69
73 6c 6f 70 77 61 72 65 2e 73 6c 6f 70 74 79 b0
ea 01
